	- Started to clean up preproc.y.

Tue Feb 22 13:48:18 CET 2000

	- Synced preproc.y with gram.y.
	- Much more clean ups.

Wed Feb 23 17:08:28 CET 2000

	- Even more clean ups.

Fri Feb 25 16:13:11 CET 2000

	- Fixed some bugs I created when I cleaned up, thanks Christof.

Wed Mar  1 10:49:03 CET 2000

	- Synced preproc.y with gram.y.
	- Added output of arrays.

Thu Mar  2 11:25:09 CET 2000

	- Fixed some parsing problems. A variable can now be a reserved
	  SQL keyword.
	- Made sure double quotes in statements are correctly quoted.

Thu Mar  2 17:42:16 CET 2000

	- Print error message if an indicator array is given for input
	  variables.

Fri Mar  3 10:47:06 CET 2000

	- Fixed handling of double quote in C code.

Tue Mar  7 10:58:21 CET 2000

	- More cleanup in ecpglib.
	- Fixed ecpg.c not not free variable list twice.

Thu Mar  9 10:12:57 CET 2000

	- Fixed another memory bug in the parser.

Wed Mar 15 17:36:02 CET 2000

	- Synced preproc.y with gram.y.
	- Synced pgc.l with scan.l.
	- Synced keyword.c.

Sun Mar 19 11:03:13 CET 2000

	- Fixed quoting bug in disconnect statement.

Thu Mar 23 08:13:39 CET 2000

	- Synced preproc.y and keyword.c.

Wed Mar 29 09:03:26 CEST 2000

	- Fixed string parsing bug in pgc.l.

Thu Mar 30 11:11:13 CEST 2000

	- Synced preproc.y with gram.y.
	- Fixed comment parsing bug.

Fri Mar 31 08:25:58 CEST 2000

	- Synced preproc.y with gram.y.

Mon Apr  3 21:20:27 CEST 2000

	- Made sure pointers are correctly inserted by libecpg. My thanks go
	  to Jan Urbanek <jan@urbanek.cz> for findin many bugs before the
	  release. 

Wed Apr  5 07:54:56 CEST 2000

	- Added patch by Peter Eisentraut <e99re41@DoCS.UU.SE> to fix some
	  duplicate definittions in preproc.y.
	- Removed duplicate ',' in execute.c.
	- Changed error message for backend errors so it fits into sqlca.
	- Fixed array handling.

Wed Apr  5 17:35:53 CEST 2000

	- Fixed handling of bool variables.
	- Set library version to 3.1.0.
	- Set ecpg version to 2.7.0.